# Modern-CMake-for-Cpp

examples/chapter12/01-full-project/: CMakeLists.txt
examples/chapter12/01-full-project/cmake/: CppCheck.cmake
examples/chapter12/01-full-project/src/calc_console/: CMakeLists.txt
